--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "host": "next --host"
   },
   "dependencies": {
+    "formik": "^2.4.6",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-hook-form": "^7.52.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
