--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "host": "next --host"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "formik": "^2.4.6",
     "next": "14.2.4",
     "react": "^18",
